--- a/assets/styles/delivery/course-outline.scss
+++ b/assets/styles/delivery/course-outline.scss
@@ -1,6 +1,6 @@
 .course-outline {
   .container-title {
-    font-weight: 500;
+    font-weight: 600;
   }
 
   .list-group.list-group-root {
